--- a/tutorial_1.ipynb
+++ b/tutorial_1.ipynb
@@ -431,7 +431,7 @@
    "id": "40f7eddc",
    "metadata": {},
    "source": [
-    "## Example in a Cosmological Model \n",
+    "## ABC for CPL model \n",
     "#### For this example we consider the CPL parametrization when the EoS for the DE is given by \n",
     "$$\n",
     "w(z) = w_0 + w_a \\frac{z}{1+z}\n",
