--- a/tutorial_2_ABC_comDatSet.ipynb
+++ b/tutorial_2_ABC_comDatSet.ipynb
@@ -13,7 +13,8 @@
     "import pandas as pd\n",
     "import matplotlib.image as mpimg\n",
     "from scipy.misc import derivative\n",
-    "from scipy.integrate import quad"
+    "from scipy.integrate import quad\n",
+    "from scipy.interpolate import interp1d"
    ]
   },
   {
@@ -33,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "59657fda",
    "metadata": {},
    "outputs": [],
@@ -67,7 +68,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "id": "3ddafb21",
    "metadata": {},
    "outputs": [],
@@ -75,12 +76,13 @@
     "Omega_m0 = 0.3\n",
     "Omega_L0 = 0.7\n",
     "h = 0.71\n",
+    "H0 = h *100\n",
     "zvals = np.linspace(0,3,100)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "769a61b1",
    "metadata": {},
    "outputs": [],
@@ -94,22 +96,21 @@
     "    de_term = Omega_L0 * (1+z)**(3*(1+w0+wa)) * np.exp(-3*wa*z/(1+z))\n",
     "    return  H0 * np.sqrt(matter_term + de_term)\n",
     "\n",
-    "\n",
     "def H():\n",
     "       return 100*h\n",
     "\n",
-    "def HUBz(z):\n",
-    "    return H()*hubble_normalized_cpl(z)\n",
+    "def HUBz(z,w0,wa):\n",
+    "    return H()*hubble_normalized_cpl(z,w0,wa)\n",
     "\n",
-    "def inverse_hubble_normalized_z(z):\n",
+    "def inverse_hubble_normalized_cpl(z,w0,wa):\n",
     "\n",
-    "    return 1./hubble_normalized_cpl(z)\n",
+    "    return 1./hubble_normalized_cpl(z,w0,wa)\n",
     "\n",
-    "def hubble_normalized_a(a):\n",
-    "    return hubble_normalized_cpl(1./a-1)\n",
+    "def hubble_normalized_a(a,w0,wa):\n",
+    "    return hubble_normalized_cpl(1./a-1,w0,wa)\n",
     "\n",
-    "def hubble_prime_normalized_a(a):\n",
-    "    return derivative(hubble_normalized_a, a, dx=1e-6)\n",
+    "def hubble_prime_normalized_a(a,w0,wa):\n",
+    "    return derivative(hubble_normalized_a(a,w0,wa), a, dx=1e-6)\n",
     "\n",
     "def D_H():\n",
     "    \"\"\"\n",
@@ -117,31 +118,123 @@
     "    \"\"\"\n",
     "    return 2997.98/h\n",
     "\n",
-    "def comoving_distance_z(z1):\n",
-    "    return D_H() *quad(inverse_hubble_normalized_z,0, z1,epsabs=1e-6, epsrel=1e-6, limit=200)[0]\n",
+    "def comoving_distance_cpl(z,w0,wa):\n",
+    "    return D_H() *quad(inverse_hubble_normalized_cpl(z,w0,wa),0, z,epsabs=1e-6, epsrel=1e-6, limit=200)[0]\n",
     "\n",
     "# angular diameter distance in units of MPc\n",
-    "def angular_diameter_distance_z(z):\n",
+    "def angular_diameter_distance_cpl(z,w0,wa):\n",
     "    \"\"\"\n",
     "    Angular diameter distance as function of redshift z\n",
     "    in units of MPc\n",
     "    \"\"\"\n",
-    "    d_c = comoving_distance_z(z)/(1.+z)\n",
+    "    d_c = comoving_distance_cpl(z,w0,wa)/(1.+z)\n",
     "    return d_c\n",
     "\n",
     "# luminosity distance in units of MPc\n",
-    "def luminosity_distance_z(self, z):\n",
-    "    d_c = comoving_distance_z(z)\n",
+    "def luminosity_distance_cpl(z,w0,wa):\n",
+    "    d_c = comoving_distance_cpl(z,w0,wa)\n",
     "    return (1 + z) * d_c\n",
+    "\n",
+    "def build_luminosity_distance_interpolator(w0,wa,zmax=1.5,npoints=150):\n",
+    "    zgrid = np.linspace(1e-4, zmax, npoints)\n",
+    "    dLgrid = np.array([luminosity_distance_cpl(z,w0,wa) for z in zgrid])\n",
+    "    _dL_interp = interp1d(zgrid, dLgrid, kind='cubic', bounds_error=False, fill_value='extrapolate')\n",
+    "    _zmax_interp = zmax\n",
+    "\n",
+    "def luminosity_distance_fast(z):\n",
+    "    if hasattr('_dL_interp') and z <= _zmax_interp:\n",
+    "        return _dL_interp(z)\n",
+    "    else:\n",
+    "        return luminosity_distance_cpl(z,w0,wa)\n",
+    "\n",
+    "def distance_modulus(z,w0,wa):\n",
+    "    try:\n",
+    "        dL = luminosity_distance_fast(z,w0,wa)\n",
+    "        return 5 * np.log10(dL) + 25\n",
+    "    except Exception as e:\n",
+    "        print(f\"[ERROR] distance_modulus failed at z = {z}: {e}\")\n",
+    "        return 1e6  # Return large chi2 penalty\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "id": "2353fe35",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# DATA: \n",
+    "data = pd.read_csv('/home/alfonsozapata/SimpleMC/simplemc/data/binned_pantheon.txt', sep=r'\\s+')\n",
+    "zcmb = data['zcmb']\n",
+    "\n",
+    "arr_hub = np.loadtxt('/home/alfonsozapata/SimpleMC/simplemc/data/Hz_all.dat')\n",
+    "z_obs= arr_hub[:,0]\n",
+    "hub_obs = arr_hub[:,1]\n",
+    "error_obs = arr_hub[:,2]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "id": "84cc06c2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "def mu_sim(w0,wa): \n",
+    "    mod = np.array([distance_modulus(z,w0,wa) for z in zcmb])\n",
+    "    return mod\n",
+    "\n",
+    "def Hubble_sim(w0, wa):\n",
+    "    try:\n",
+    "        Hz_sim = np.array([hubble_normalized_cpl(z, w0, wa) for z in z_obs])\n",
+    "        # Check for   # for NaN entries \n",
+    "        if np.any(~np.isfinite(Hz_sim)) or np.any(Hz_sim <= 0):\n",
+    "            return None\n",
+    "        return Hz_sim\n",
+    "  \n",
+    "    except:\n",
+    "        return None\n",
+    "\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "id": "88049308",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def dist1_sn(mu_obs,mu_sim):\n",
+    "    return abs(np.mean(mu_obs) - np.mean(mu_sim))\n",
+    "\n",
+    "\n",
+    "\n",
+    "def dist2_hub(observed, errors, simulated):\n",
+    "    if simulated is None:\n",
+    "        return np.inf\n",
+    "    \n",
+    "    return np.sum((observed - simulated)**2 / errors**2)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a9f5ba2e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "\n"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "cosmodesi",
+   "display_name": "base",
    "language": "python",
-   "name": "cosmodesi"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -153,7 +246,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.12"
+   "version": "3.9.23"
   }
  },
  "nbformat": 4,
