--- a/tutorial_2_ABC_comDatSet.ipynb
+++ b/tutorial_2_ABC_comDatSet.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "id": "cdae595d",
    "metadata": {},
    "outputs": [],
@@ -14,7 +14,8 @@
     "import matplotlib.image as mpimg\n",
     "from scipy.misc import derivative\n",
     "from scipy.integrate import quad\n",
-    "from scipy.interpolate import interp1d"
+    "from scipy.interpolate import interp1d\n",
+    "from scipy.stats import norm, uniform"
    ]
   },
   {
@@ -82,7 +83,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 4,
    "id": "769a61b1",
    "metadata": {},
    "outputs": [],
@@ -159,7 +160,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 5,
    "id": "2353fe35",
    "metadata": {},
    "outputs": [],
@@ -176,7 +177,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 6,
    "id": "84cc06c2",
    "metadata": {},
    "outputs": [],
@@ -202,11 +203,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": null,
    "id": "88049308",
    "metadata": {},
    "outputs": [],
    "source": [
+    "# simulation of the data\n",
+    "#mu_sim = mu_sim(w0,wa)\n",
+    "#Hz_sim = Hubble_sim(w0,wa)\n",
+    "\n",
+    "\n",
     "def dist1_sn(mu_obs,mu_sim):\n",
     "    return abs(np.mean(mu_obs) - np.mean(mu_sim))\n",
     "\n",
@@ -221,12 +227,181 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
+   "id": "061e50df",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# we need define our priors for the parameters w0 and wa \n",
+    "def prior_w0():\n",
+    "    return uniform.rvs(loc=-2.0, scale=1.0)\n",
+    "def prior_wa():\n",
+    "    return uniform.rvs(loc=-1.0, scale=2.0)\n",
+    "prior_samples_0 = [prior_w0() for _ in range(10)]\n",
+    "prior_samples_a = [prior_wa() for _ in range(10)]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
    "id": "a9f5ba2e",
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n"
+    "def rejection_sim_cpl(prior_w0, prior_wa, zcmb, z_obs, observed_data_mu, observed_data_h, errors_mu, errors_h,\n",
+    "                     epsilon, n_accepted, n_sims_before_update=100000, max_simulations=10**7, verbose=True):\n",
+    "    \"\"\"\n",
+    "    ABC rejection sampling for CPL dark energy parameters using both distance modulus and Hubble data\n",
+    "    \n",
+    "    Parameters:\n",
+    "    -----------\n",
+    "    prior_w0, prior_wa: functions that sample from priors for w0 and wa\n",
+    "    zcmb: array of CMB redshifts for distance modulus calculation using compressed data in this case\n",
+    "    z_obs: array of redshifts for Hubble parameter calculation  \n",
+    "    observed_data_mu: observed distance modulus data\n",
+    "    observed_data_h: observed Hubble parameter data\n",
+    "    errors_mu: errors for distance modulus data\n",
+    "    errors_h: errors for Hubble parameter data\n",
+    "    epsilon: tolerance threshold for acceptance\n",
+    "    n_accepted: target number of accepted samples\n",
+    "    n_sims_before_update: frequency of progress updates\n",
+    "    max_simulations: maximum number of simulations before stopping\n",
+    "    verbose: whether to print progress information\n",
+    "    \"\"\"\n",
+    "    \n",
+    "    # Define the simulation functions\n",
+    "    def mu_sim(w0, wa): \n",
+    "        \"\"\"Simulate distance modulus for given w0, wa parameters\"\"\"\n",
+    "        mod = np.array([distance_modulus(z, w0, wa) for z in zcmb])\n",
+    "        return mod\n",
+    "\n",
+    "    def Hubble_sim(w0, wa):\n",
+    "        \"\"\"Simulate Hubble parameter for given w0, wa parameters\"\"\"\n",
+    "        try:\n",
+    "            Hz_sim = np.array([hubble_normalized_cpl(z, w0, wa) for z in z_obs])\n",
+    "            # Check for invalid values\n",
+    "            if np.any(~np.isfinite(Hz_sim)) or np.any(Hz_sim <= 0):\n",
+    "                return None\n",
+    "            return Hz_sim\n",
+    "        except:\n",
+    "            return None\n",
+    "\n",
+    "    def combined_distance(observed_data_mu, errors_mu, observed_data_h, errors_h, simulated_data_mu, simulated_data_h):\n",
+    "        \"\"\"\n",
+    "        Combined distance metric using both distance modulus and Hubble data\n",
+    "        Uses chi-squared like distance metric\n",
+    "        \"\"\"\n",
+    "        if simulated_data_mu is None or simulated_data_h is None:\n",
+    "            return np.inf  # Reject if simulation failed\n",
+    "            \n",
+    "        # Calculate chi-squared for distance modulus\n",
+    "        chi2_mu = np.sum(((observed_data_mu - simulated_data_mu) / errors_mu)**2)\n",
+    "        \n",
+    "        # Calculate chi-squared for Hubble parameter  \n",
+    "        chi2_h = np.sum(((observed_data_h - simulated_data_h) / errors_h)**2)\n",
+    "        \n",
+    "        # Combined distance (could weight these differently if needed)\n",
+    "        total_distance = chi2_mu + chi2_h\n",
+    "        \n",
+    "        return total_distance\n",
+    "\n",
+    "    accepted_particles = []\n",
+    "    total_simulations = 0\n",
+    "    distances = []\n",
+    "    \n",
+    "    if verbose:\n",
+    "        print(f\"Starting ABC rejection with combined distance modulus and Hubble data.\")\n",
+    "        print(f\"Need to accept {n_accepted} particles.\")\n",
+    "        print(f\"Tolerance: $\\\\epsilon$ = {epsilon}\")\n",
+    "        print(f\"Maximum simulations: {max_simulations}\")\n",
+    "        print(f\"Number of distance points: {len(zcmb)}\")\n",
+    "        print(f\"Number of Hubble points: {len(z_obs)}\")\n",
+    "    \n",
+    "    while len(accepted_particles) < n_accepted and total_simulations < max_simulations:\n",
+    "        # Sample from prior\n",
+    "        w0_par = prior_w0()\n",
+    "        wa_par = prior_wa()\n",
+    "        \n",
+    "        try:\n",
+    "            # Simulate both datasets\n",
+    "            simulated_mu = mu_sim(w0_par, wa_par)\n",
+    "            simulated_h = Hubble_sim(w0_par, wa_par)\n",
+    "            \n",
+    "            # Check if simulations were successful\n",
+    "            if simulated_mu is None or simulated_h is None:\n",
+    "                total_simulations += 1\n",
+    "                continue\n",
+    "                \n",
+    "            # Calculate combined distance\n",
+    "            d = combined_distance(observed_data_mu, errors_mu, observed_data_h, errors_h, \n",
+    "                                 simulated_mu, simulated_h)\n",
+    "            distances.append(d)\n",
+    "            \n",
+    "            # Accept if within tolerance\n",
+    "            if d <= epsilon:\n",
+    "                accepted_particles.append((w0_par, wa_par, d, simulated_mu, simulated_h))\n",
+    "                \n",
+    "                if verbose and len(accepted_particles) % max(1, n_accepted//10) == 0:\n",
+    "                    print(f\"Accepted {len(accepted_particles)}/{n_accepted} particles. \"\n",
+    "                          f\"Acceptance rate: {len(accepted_particles)/total_simulations:.6f}\")\n",
+    "            \n",
+    "        except Exception as e:\n",
+    "            if verbose:\n",
+    "                print(f\"Simulation failed for w0={w0_par:.3f}, wa={wa_par:.3f}: {e}\")\n",
+    "            continue\n",
+    "        \n",
+    "        total_simulations += 1\n",
+    "        \n",
+    "        if verbose and total_simulations % n_sims_before_update == 0:\n",
+    "            current_rate = len(accepted_particles)/total_simulations if total_simulations > 0 else 0\n",
+    "            print(f\"Completed {total_simulations} simulations. \"\n",
+    "                  f\"Accepted: {len(accepted_particles)}. \"\n",
+    "                  f\"Current acceptance rate: {current_rate:.6f}\")\n",
+    "    \n",
+    "    if verbose:\n",
+    "        if total_simulations >= max_simulations:\n",
+    "            print(f\"Stopped early! Reached maximum simulations ({max_simulations}).\")\n",
+    "        final_rate = len(accepted_particles)/total_simulations if total_simulations > 0 else 0\n",
+    "        print(f\"Completed! Total simulations: {total_simulations}. \"\n",
+    "              f\"Final acceptance rate: {final_rate:.6f}\")\n",
+    "\n",
+    "    # Extract results\n",
+    "    accepted_w0 = np.array([p[0] for p in accepted_particles])\n",
+    "    accepted_wa = np.array([p[1] for p in accepted_particles])\n",
+    "    accepted_d = np.array([p[2] for p in accepted_particles])\n",
+    "    accepted_mu = np.array([p[3] for p in accepted_particles])  # All accepted distance moduli\n",
+    "    accepted_h = np.array([p[4] for p in accepted_particles])   # All accepted Hubble values\n",
+    "    \n",
+    "    return {\n",
+    "        'w0': accepted_w0,\n",
+    "        'wa': accepted_wa, \n",
+    "        'distances': accepted_d,\n",
+    "        'mu_simulations': accepted_mu,\n",
+    "        'h_simulations': accepted_h,\n",
+    "        'total_simulations': total_simulations,\n",
+    "        'all_distances': np.array(distances)\n",
+    "    }\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "60312f0b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    " # Run ABC with combined data\n",
+    "epsilon_combined = 100  # May need adjustment for combined distance\n",
+    "n_accepted_combined = 200\n",
+    "\n",
+    "\n",
+    "accepted_w0_comb, accepted_wa_comb, accepted_d_comb, total_sim_comb = rejection_sim_cpl(\n",
+    "    prior_w0, prior_wa, simulator_combined, combined_distance,\n",
+    "    {'hubble': mock_data['hubble'][0], 'sn': mock_data['sn'][0], 'bao': mock_data['bao'][0]},\n",
+    "    {'hubble': mock_data['hubble'][1], 'sn': mock_data['sn'][1], 'bao': mock_data['bao'][1]},\n",
+    "    epsilon_combined, n_accepted_combined,\n",
+    "    weights={'hubble': 1.0, 'sn': 1.0, 'bao': 1.0}\n",
+    ")"
    ]
   }
  ],
