--- a/tutorial_2_ABC_comDatSet.ipynb
+++ b/tutorial_2_ABC_comDatSet.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 12,
    "id": "cdae595d",
    "metadata": {},
    "outputs": [],
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 13,
    "id": "59657fda",
    "metadata": {},
    "outputs": [],
@@ -69,7 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 14,
    "id": "3ddafb21",
    "metadata": {},
    "outputs": [],
@@ -83,7 +83,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 15,
    "id": "769a61b1",
    "metadata": {},
    "outputs": [],
@@ -160,16 +160,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 16,
    "id": "2353fe35",
    "metadata": {},
    "outputs": [],
    "source": [
     "# DATA: \n",
-    "data = pd.read_csv('/home/alfonsozapata/SimpleMC/simplemc/data/binned_pantheon.txt', sep=r'\\s+')\n",
+    "data = pd.read_csv('/Users/alfonsozapata/Documents/SimpleMC/simplemc/data/binned_pantheon.txt', sep=r'\\s+')\n",
     "zcmb = data['zcmb']\n",
     "\n",
-    "arr_hub = np.loadtxt('/home/alfonsozapata/SimpleMC/simplemc/data/Hz_all.dat')\n",
+    "\n",
+    "arr_hub = np.loadtxt('/Users/alfonsozapata/Documents/SimpleMC/simplemc/data/Hz_all.dat')\n",
     "z_obs= arr_hub[:,0]\n",
     "hub_obs = arr_hub[:,1]\n",
     "error_obs = arr_hub[:,2]"
@@ -177,7 +178,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 17,
    "id": "84cc06c2",
    "metadata": {},
    "outputs": [],
@@ -211,9 +212,45 @@
     "# simulation of the data\n",
     "#mu_sim = mu_sim(w0,wa)\n",
     "#Hz_sim = Hubble_sim(w0,wa)\n",
+    "def dist1_sn(mu_obs,mu_sim,cov_filename):\n",
+    "    filename = cov_filename\n",
+    "        \n",
+    "    print(\"Loading covariance from {}\".format(filename))\n",
+    "    f = open(filename)\n",
+    "    line = f.readline()\n",
+    "    n = int(len(self.zcmb))\n",
+    "    C = np.zeros((n,n))\n",
+    "    ii = -1\n",
+    "    jj = -1\n",
+    "    mine = 999\n",
+    "    maxe = -999\n",
+    "    for i in range(self.origlen):\n",
+    "        jj = -1\n",
+    "        if self.ww[i]:\n",
+    "            ii += 1\n",
+    "        for j in range(self.origlen):\n",
+    "            if self.ww[j]:\n",
+    "                jj += 1\n",
+    "            val = float(f.readline())\n",
+    "            if self.ww[i]:\n",
+    "                if self.ww[j]:\n",
+    "                    C[ii,jj] = val\n",
+    "    f.close()\n",
+    "    print('Done')\n",
+    "    self.cov = C\n",
+    "    self.xdiag = 1/self.cov.diagonal()\n",
     "\n",
     "\n",
-    "def dist1_sn(mu_obs,mu_sim):\n",
+    "\n",
+    "    data = pd.read_csv(values_filename, delim_whitespace=True)\n",
+    "    origlen = len(data)\n",
+    "    tvec = mu_obs - mu_sim\n",
+    "    tvec -= (tvec * xdiag).sum() / (xdiag.sum())\n",
+    "   '''\n",
+    "   The intrinsic supernova absolute magnitude M \n",
+    "   is marginalized out by subtracting a weighted mean:\n",
+    "   '''\n",
+    "    \n",
     "    return abs(np.mean(mu_obs) - np.mean(mu_sim))\n",
     "\n",
     "\n",
@@ -227,7 +264,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
+   "id": "24465996",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
    "id": "061e50df",
    "metadata": {},
    "outputs": [],
@@ -243,7 +288,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 23,
    "id": "a9f5ba2e",
    "metadata": {},
    "outputs": [],
@@ -388,20 +433,27 @@
    "execution_count": null,
    "id": "60312f0b",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'simulator_combined' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[21], line 7\u001b[0m\n\u001b[1;32m      2\u001b[0m epsilon_combined \u001b[38;5;241m=\u001b[39m \u001b[38;5;241m100\u001b[39m  \u001b[38;5;66;03m# May need adjustment for combined distance\u001b[39;00m\n\u001b[1;32m      3\u001b[0m n_accepted_combined \u001b[38;5;241m=\u001b[39m \u001b[38;5;241m200\u001b[39m\n\u001b[1;32m      6\u001b[0m accepted_w0_comb, accepted_wa_comb, accepted_d_comb, total_sim_comb \u001b[38;5;241m=\u001b[39m rejection_sim_cpl(\n\u001b[0;32m----> 7\u001b[0m    prior_w0, prior_wa, simulator_combined, combined_distance,\n\u001b[1;32m      8\u001b[0m    {\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mhubble\u001b[39m\u001b[38;5;124m'\u001b[39m: mock_data[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mhubble\u001b[39m\u001b[38;5;124m'\u001b[39m][\u001b[38;5;241m0\u001b[39m], \u001b[38;5;124m'\u001b[39m\u001b[38;5;124msn\u001b[39m\u001b[38;5;124m'\u001b[39m: mock_data[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124msn\u001b[39m\u001b[38;5;124m'\u001b[39m][\u001b[38;5;241m0\u001b[39m], \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mbao\u001b[39m\u001b[38;5;124m'\u001b[39m: mock_data[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mbao\u001b[39m\u001b[38;5;124m'\u001b[39m][\u001b[38;5;241m0\u001b[39m]},\n\u001b[1;32m      9\u001b[0m    {\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mhubble\u001b[39m\u001b[38;5;124m'\u001b[39m: mock_data[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mhubble\u001b[39m\u001b[38;5;124m'\u001b[39m][\u001b[38;5;241m1\u001b[39m], \u001b[38;5;124m'\u001b[39m\u001b[38;5;124msn\u001b[39m\u001b[38;5;124m'\u001b[39m: mock_data[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124msn\u001b[39m\u001b[38;5;124m'\u001b[39m][\u001b[38;5;241m1\u001b[39m], \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mbao\u001b[39m\u001b[38;5;124m'\u001b[39m: mock_data[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mbao\u001b[39m\u001b[38;5;124m'\u001b[39m][\u001b[38;5;241m1\u001b[39m]},\n\u001b[1;32m     10\u001b[0m    epsilon_combined, n_accepted_combined,\n\u001b[1;32m     11\u001b[0m    weights\u001b[38;5;241m=\u001b[39m{\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mhubble\u001b[39m\u001b[38;5;124m'\u001b[39m: \u001b[38;5;241m1.0\u001b[39m, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124msn\u001b[39m\u001b[38;5;124m'\u001b[39m: \u001b[38;5;241m1.0\u001b[39m, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mbao\u001b[39m\u001b[38;5;124m'\u001b[39m: \u001b[38;5;241m1.0\u001b[39m}\n\u001b[1;32m     12\u001b[0m )\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'simulator_combined' is not defined"
+     ]
+    }
+   ],
    "source": [
     " # Run ABC with combined data\n",
     "epsilon_combined = 100  # May need adjustment for combined distance\n",
     "n_accepted_combined = 200\n",
     "\n",
     "\n",
-    "accepted_w0_comb, accepted_wa_comb, accepted_d_comb, total_sim_comb = rejection_sim_cpl(\n",
-    "    prior_w0, prior_wa, simulator_combined, combined_distance,\n",
-    "    {'hubble': mock_data['hubble'][0], 'sn': mock_data['sn'][0], 'bao': mock_data['bao'][0]},\n",
-    "    {'hubble': mock_data['hubble'][1], 'sn': mock_data['sn'][1], 'bao': mock_data['bao'][1]},\n",
-    "    epsilon_combined, n_accepted_combined,\n",
-    "    weights={'hubble': 1.0, 'sn': 1.0, 'bao': 1.0}\n",
-    ")"
+    "accepted_w0_comb, accepted_wa_comb, accepted_d_comb, total_sim_comb = (prior_w0, prior_wa, zcmb, z_obs, observed_data_mu, hub_obs, errors_mu, hub,\n",
+    "                     epsilon, n_accepted, n_sims_before_update=100000, max_simulations=10**7, verbose=True):"
    ]
   }
  ],
@@ -421,7 +473,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.23"
+   "version": "3.12.2"
   }
  },
  "nbformat": 4,
