--- a/tutorial_2_ABC_comDatSet.ipynb
+++ b/tutorial_2_ABC_comDatSet.ipynb
@@ -453,7 +453,7 @@
     "\n",
     "\n",
     "accepted_w0_comb, accepted_wa_comb, accepted_d_comb, total_sim_comb = (prior_w0, prior_wa, zcmb, z_obs, observed_data_mu, hub_obs, errors_mu, hub,\n",
-    "                     epsilon, n_accepted, n_sims_before_update=100000, max_simulations=10**7, verbose=True):"
+    "                     epsilon, n_accepted, n_sims_before_update=100000, max_simulations=10**7, verbose=True)"
    ]
   }
  ],
